<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ScanBarcodeActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/scanBtn"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_background"
                    android:text="@string/scan_now"
                    android:textColor="?attr/button2TextColor"
                    android:layout_marginTop="34dp"
                    android:layout_marginStart="10dp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/galleryBtn"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_background"
                    android:text="@string/gallery"
                    android:textColor="?attr/button2TextColor"
                    android:layout_marginTop="34dp"
                    android:layout_marginStart="5dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/result"
                android:layout_marginTop="34dp"
                android:layout_marginStart="20dp"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/resultIv"
                android:textAlignment="center"
                android:textSize="32sp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:id="@+id/canResubmit"
                android:layout_marginTop="24dp"
                android:text="@string/scan_again"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

            <Button
                android:id="@+id/addRegisterButton"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="34dp"
                android:layout_weight="1"
                android:background="@drawable/button_green_background"
                app:backgroundTint="@null"
                android:text="@string/add_register"
                android:textColor="?attr/buttonTextColor" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>