<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackgroundColor">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:paddingBottom="100dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pharmacyImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/pharmacy_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pharmacyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/pharmacy_name"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pharmacyLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/address"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.8">

                    <ImageButton
                        android:id="@+id/favoriteIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:contentDescription="@string/favorite"
                        android:focusable="true"
                        android:background="@drawable/favorite_icon_selector" />

                    <ImageView
                        android:id="@+id/gotoPharmacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:contentDescription="@string/go_to_pharmacy"
                        android:focusable="true"
                        app:srcCompat="@drawable/baseline_location_on_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.8"
                    android:paddingRight="10dp">

                    <ImageButton
                        android:id="@+id/rateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/baseline_add_comment_24"
                        android:contentDescription="@string/rate_pharmacy"
                        android:focusable="true" />

                    <ImageButton
                        android:id="@+id/reportButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/report_flag"
                        android:contentDescription="@string/report_pharmacy"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/rateButton"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/rating"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:id="@+id/availableStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/available_stock"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pharmacyLocation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stockList"
                android:layout_width="wrap_content"
                android:layout_height="169dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/manageStock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availableStock"
                tools:listitem="@layout/recycler_buy_medicine">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/manageStock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_background"
                    android:contentDescription="@string/manage_stock"
                    android:focusable="true"
                    android:text="@string/manage_stock"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageButton
                    android:id="@+id/sharePharmacy"
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bottom_background"
                    android:src="@drawable/baseline_ios_share_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>