<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCardMedicine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:cardBackgroundColor="@color/recycler_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recPharmacyImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <LinearLayout
            android:id="@+id/recPharmacyNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toEndOf="@id/recPharmacyImage"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/recPharmacyName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy_name"
                android:layout_weight="1"
                android:textColor="@color/green_4"
                android:textSize="24sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/hyphenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/hyphen"
                android:textColor="@color/green_4"
                android:textSize="24sp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/recPharmacyStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/zero"
                android:textColor="@color/green_4"
                android:textSize="24sp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/recPharmacyNameLayout"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/recPharmacyImage"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/recPharmacyLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/green_4"
                android:textSize="12sp"
                android:text="@string/pharmacy_location" />

            <!--
            <TextView
                android:id="@+id/hyphenLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="-"
                android:textColor="@color/green_4"
                android:textSize="12sp" />
                -->

            <TextView
                android:id="@+id/recPharmacyDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/zero_meters"
                android:textColor="@color/green_4"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
