<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackgroundColor"
    tools:context=".MedicineInformationPanelActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/medicineImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/pharmacy_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/medicineName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/medicine_name"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pharmacyImage" />

                    <TextView
                        android:id="@+id/purposeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="Purpose"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/medicineDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/medicine_description"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pharmacyName" />

                    <TextView
                        android:id="@+id/toggle_translation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/see_original_text"
                        android:textColor="?attr/iconColor"
                        android:visibility="invisible"
                        android:layout_marginStart="32dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/notificationButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="true"
                        android:contentDescription="@string/notification"
                        android:focusable="true"
                        android:background="@drawable/notification_icon_selector" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/availableIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/available_in"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pharmacyLocation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pharmacyList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availableStock"
                tools:listitem="@layout/recycler_item_pharmacy">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>