<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackgroundColor"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_face_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text=""
        android:textColor="?attr/titleTextColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="52dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/username"
        android:textColor="?attr/titleTextColor"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateUsername"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_green_background"
        android:text="@string/updateUsername"
        android:visibility="invisible"
        android:textColor="?attr/buttonTextColor"
        android:textSize="10sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_green_background"
        android:padding="18dp"
        android:text="@string/logout"
        android:textColor="?attr/buttonTextColor"
        android:textSize="30sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@drawable/bottom_nav_background"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/bottom_nav_selector"
        app:itemTextColor="?attr/bottomIconColor"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>